--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-pino-logger": "^6.0.0",
+    "pino": "^6.13.0",
+    "pino-pretty": "^5.1.3",
     "plaid": "^8.5.2"
   }
 }
