--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-pino-logger": "^6.0.0",
+    "moment": "^2.29.1",
     "pino": "^6.13.0",
     "pino-pretty": "^5.1.3",
     "plaid": "^8.5.2"
